# rustmvc

./: Cargo.toml
migrator/: Cargo.toml
migrator/src/: lib.rs
somei_yo4no/: Cargo.toml
somei_yo4no/codegen/: Cargo.toml
somei_yo4no/codegen/src/: lib.rs
somei_yo4no/http/: Cargo.toml
somei_yo4no/http/src/: lib.rs  request.rs  response.rs  server.rs  uri.rs
somei_yo4no/src/: component.rs  dataframe.rs  lib.rs
somei_yo4no/src/html/: macro.rs  mod.rs
src/: main.rs
src/components/: list.rs
src/models/: todo.rs
src/server/: client.rs  dataframe.rs  mod.rs  observer.rs  request.rs  response.rs  uri.rs
src/server/reftree/: mod.rs  node.rs
static/: index.html
tinplate/: Cargo.toml
tinplate/codegen/: Cargo.toml
tinplate/codegen/src/: lib.rs
tinplate/reftree/: Cargo.toml
tinplate/reftree/src/: lib.rs  node.rs
tinplate/src/: lib.rs  request.rs  requests.rs  response.rs  server.rs  value.rs
tinplate/test/: requests
