[package]
name = "somei_yo4no"
version = "0.1.0"
authors = ["木瓜丸 <boke0@eugensite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.58"
web-sys = "0.3.35"

codegen = { path = "codegen" }
http = { path = "http" }

[workspace]
members = [
    "codegen",
    "http"
]
