[package]
name = "codegen"
version = "0.1.0"
authors = ["木瓜丸 <boke0@eugensite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.8"
lazy_static = "1.4.0"
syn = { version = "1.0.15", features = ["full","extra-traits"] }
quote = "1.0"
http = { path = "../http" }
